erDiagram
    USER {
        Long id PK
        String firstName
        String lastName
        String email
        String password
        boolean isAdmin
        String picture
        String teamName
        LocalDateTime createdAt
        LocalDateTime updatedAt
        String oauthProvider
        String oauthProviderId
    }
    
    VEHICLE {
        Long id PK
        String name
        String plates
        String soat
        Long userId FK
        Long categoryId FK
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }
    
    EVENT {
        Long id PK
        String name
        LocalDateTime startDate
        LocalDateTime endDate
        String location
        String description
        Double entryPrice
        String status
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }
    
    STAGE {
        Long id PK
        String name
        String description
        Long eventId FK
        Integer orderNumber
        boolean isNeutralized
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }
    
    CATEGORY {
        Long id PK
        String name
        String description
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }
    
    EVENT_VEHICLE {
        Long id PK
        Long eventId FK
        Long vehicleId FK
        LocalDateTime registrationDate
        String status
    }
    
    EVENT_CATEGORY {
        Long id PK
        Long eventId FK
        Long categoryId FK
    }
    
    STAGE_RESULT {
        Long id PK
        Long stageId FK
        Long vehicleId FK
        LocalDateTime timestamp
        double latitude
        double longitude
        Duration penaltyWaypoint
        Duration penaltySpeed
        Duration discountClaim
        Integer elapsedTimeSeconds
    }
    
    USER ||--o{ VEHICLE : "owns"
    VEHICLE }o--|| CATEGORY : "belongs_to"
    EVENT ||--o{ STAGE : "contains"
    EVENT ||--o{ EVENT_VEHICLE : "has_participants"
    EVENT ||--o{ EVENT_CATEGORY : "has_categories"
    VEHICLE ||--o{ EVENT_VEHICLE : "participates_in"
    CATEGORY ||--o{ EVENT_CATEGORY : "categorizes"
    STAGE ||--o{ STAGE_RESULT : "has_results"
    VEHICLE ||--o{ STAGE_RESULT : "achieves" 